# scoob

./: Cargo.toml  Dockerfile  README.md  RELEASE.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml  test.yml
src/: config.rs  encryption.rs  file.rs  generate_keys.rs  main.rs  manage.rs  modify.rs  start.rs
test/: compare.sh  decrypted.txt  encrypted.txt  index.js  secrets.yml  test.yml
