[package]
authors = ["Jordan Gensler <jgensler@netflix.com>"]
edition = "2018"
name = "scoob"
version = "0.2.2-alpha.0"
description = "A secrets management CLI"
repository = "https://github.com/hostyhosting/scoob/"
license = "MIT"
# TODO: Enable publishing
publish = false

[dependencies]
data-encoding = "2.3.2"
edit = "0.1.3"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
sodiumoxide = "0.2.6"
structopt = "0.3.13"
colored = "2"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
